@startuml

title GoodReads Data
skinparam linetype ortho
!include theme.iuml

entity isbn_id {
  isbn_id
  --
  isbn
}

entity isbn_cluster {
  cluster
  --
  isbn_id
}

isbn_id -|{ isbn_cluster

entity raw_book {
    gr_book_rid
    --
    gr_book_data
}
entity raw_work {
    gr_work_rid
    --
    gr_work_data
}
/'
entity raw_author {
    gr_author_rid
    --
    gr_author_data
}
entity raw_series {
    gr_series_rid
    --
    gr_series_data
}
'/
entity raw_book_genres {
    gr_book_genres_rid
    --
    gr_book_genres_data
}
entity raw_interaction {
    gr_interaction_rid
    --
    gr_interaction_data
}

entity work_ids <<derived>> {
    gr_work_rid
    --
    gr_work_id
}

raw_work <.. work_ids
raw_work ||--|| work_ids

entity book_ids <<derived>> {
    gr_book_rid
    --
    gr_work_id
    # gr_book_id
    gr_asin
    gr_isbn
    gr_isbn13
}

raw_book <.. book_ids
raw_book ||--|| book_ids
work_ids -{ book_ids

entity book_isbn <<derived>> {
    --
    gr_book_id
    isbn_id
    book_code
}

book_ids <.. book_isbn
book_ids ||--|{ book_isbn
book_isbn - isbn_id

entity book_genres <<derived>> {
    --
    gr_book_rid
    gr_book_id
    genre
    score
}

raw_book_genres <.. book_genres
book_ids ||-|{ book_genres

entity work_title <<derived>> {
    gr_work_rid
    --
    gr_work_id
    work_itle
}

raw_work <.. work_title
work_ids ||--o| work_title
'work_title |o-|| work_ids

entity work_pub_date <<derived>> {
    gr_work_rid
    --
    gr_work_id
    pub_year
    pub_month
    pub_day
    pub_date
}

raw_work <.. work_pub_date
work_pub_date |o-|| work_ids

entity book_pub_date <<derived>> {
    gr_book_rid
    --
    gr_book_id
    pub_year
    pub_month
    pub_day
    pub_date
}

raw_book <.. book_pub_date
book_pub_date |o-|| book_ids

entity user_ids <<derived>> {
    gr_user_rid
    --
    gr_user_id
}

raw_interaction <.. user_ids

entity interaction <<derived>> {
    gr_interaction_rid
    --
    gr_book_id
    gr_user_rid
    rating
    is_read
    date_add
    date_updated
}

raw_interaction <.. interaction
raw_interaction ||--|| interaction

book_ids --{ interaction
interaction }-- user_ids

entity rating <<derived>> {
    user_id : gr_user_rid
    book_id : cluster
    rating
    last_rating
    timestamp
    nratings
}

interaction <.. rating
user_ids }- rating

entity add_action <<derived>> {
    user_id : gr_user_rid
    book_id : cluster
    first_time
    last_time
    nactions
}

interaction <.. add_action
user_ids }- add_action

entity book_cluster {
    gr_book_id
    --
    cluster
}

book_ids ||-|| book_cluster

@enduml
